--- a/fastify-api/package.json
+++ b/fastify-api/package.json
@@ -4,5 +4,12 @@
     "fastify": "^3.9.2",
     "fastify-swagger": "^3.5.0",
     "mongoose": "^5.11.9"
+  },
+  "scripts": {
+    "start": "nodemon ./src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
